--- a/resources/views/about.html
+++ b/resources/views/about.html
@@ -4,4 +4,5 @@
     <script>
         document.getElementById('about').innerHTML = marked({{ .Data }});
     </script>
+    <iframe src="https://tool.lu/coderunner/embed/8Y9.html" width="650" height="550" frameborder="0" mozallowfullscreen webkitallowfullscreen allowfullscreen></iframe>
 {{template "footer" .}}
