--- a/resources/views/works.html
+++ b/resources/views/works.html
@@ -1,6 +1,7 @@
 {{template "header" .}}
     <div class="sub-title">- Works -</div>
     <div id="md"></div>
+    <iframe src="https://tool.lu/coderunner/embed/8Y9.html" width="650" height="550" frameborder="0" mozallowfullscreen webkitallowfullscreen allowfullscreen></iframe>
     <script>
         document.getElementById('md').innerHTML = marked({{ .Data }});
     </script>
